# furry

./: CMakeLists.txt  main.c
init/: CMakeLists.txt  init.c  init.h
log/: CMakeLists.txt  log.c  log.h
